--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,21 @@
 {
   "name": "cipherstudio-backend",
-  "main": "server.js",
   "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "Backend server for CipherStudio project",
+  "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "build": "echo 'Nothing to build for backend'"
+  },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongo": "^0.1.0",
-    "mongodb": "^6.20.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.7.0"
   }
 }
